# doc-writing-speech-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  server.py  setup-android.sh
static/: index.html
tools/: use_github.py
