[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-writing-speech-agent"
version = "0.1.0"
description = "Bidirectional voice/text document-writing agent powered by Nova Sonic 2 and Claude Opus 4.6"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Murat Kaan Meral" },
]
dependencies = [
    "strands-agents[bidi]",
    "strands-agents-tools",
    "strands-perplexity",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "requests",
]

[project.urls]
Homepage = "https://github.com/mkmeral/doc-writing-speech-agent"
Repository = "https://github.com/mkmeral/doc-writing-speech-agent"

[project.scripts]
doc-writer = "server:main"

[tool.setuptools]
py-modules = ["server"]
packages = ["tools", "static"]

[tool.setuptools.package-data]
static = ["*.html", "*.css", "*.js"]
